<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buildman</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="setup_my_app">SETUP MY APP</string>
    <string name="getmy_project_sites">GET MY PROJECTS</string>
    <string name="getmy_data">GET MY DATA</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="switchsite">Switch Site</string>
    <string name="site_chart">Site Chart</string>
    <string name="status_report">Status Report</string>
    <string name="material_chart">Material Chart</string>
    <string name="last_syn_report">Last Syn Report</string>
    <string name="choose_material">Material List</string>
    <string name="synchornising">Synchornising</string>
    <string name="buildman">B U I L D M A N</string>
    <string name="poweredbuildmantechnologies">Powered by Buildman Technologies</string>
    <string name="project_doc">Documents</string>
    <string name="materials">Materials</string>
    <string name="manpower">Manpower</string>
    <string name="machinery">Machinery</string>
    <string name="expenses">Expenses</string>
    <string name="status">Status</string>
    <string name="knowledge_center">Knowledge Center</string>
    <string name="analytics">Analytics</string>
    <string name="search_sites">Search Sites</string>
    <string name="qty_completion">Comp.Qty.</string>
    <string name="scope_of_work">Scope Of Work</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="tasks">Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="units">Units</string>
    <string name="site_ids">Site Ids</string>
    <string name="select_project">Select Project</string>
    <string name="curentstock">Cur.Stk.</string>
    <string name="add_new">ADD NEW</string>
    <string name="adjust_in">Adjust In</string>
    <string name="adjust_out">Adjust Out</string>
    <string name="today_qty">Today Qty.</string>
    <string name="total_till_date_qty">Total Till Date Qty.</string>
    <string name="curent_qty">Cur.Qty.</string>
    <string name="est">EST</string>
    <string name="actual">Actual</string>
    <string name="select">Select</string>
    <string name="total_qty">Total Qty.</string>
    <string name="completed_qty">Comp.Qty</string>
    <string name="completedqty">Completed Qty</string>
    <string name="totalcompleted_qty">Total.Comp.Qty</string>
    <string name="dc">DC</string>
    <string name="invoice">INVOICE</string>
    <string name="number">Number</string>
    <string name="matl_received">Matl Received</string>
    <string name="rate">Rate</string>
    <string name="rate_amount">200.00</string>
    <string name="dc_invoice">DC/Inv.NO. </string>
    <string name="receivedstock">Recd.Stock </string>
    <string name="remarks">REMARKS </string>
    <string name="lot_number">Lot No. </string>
    <string name="update_stock">UPDATE STOCK </string>
    <string name="update_status">UPDATE STATUS </string>
    <string name="confirm">CONFIRM </string>
    <string name="approve">APPROVE </string>
    <string name="get_records">Get Records </string>
    <string name="stock">Stock </string>
    <string name="stock_value">Stk.Value</string>
    <string name="transaction_date">Trans.Date</string>
    <string name="used_stock">Used.Stock</string>
    <string name="matl_used">Matl Used</string>
    <string name="reqd_stock">Reqd.Stk.</string>
    <string name="raise_indent">Raise Indent</string>
    <string name="today">Today</string>
    <string name="labour_total_till_date">Labour(total till date)</string>
    <string name="type">Type</string>
    <string name="qty">Qty</string>
    <string name="contractor">Contractor</string>
    <string name="summary">Summary</string>
    <string name="total_billable">Total Billable</string>
    <string name="total_billed">Total Billed</string>
    <string name="total_amt">Total Amount</string>
    <string name="total_paid">Total Paid</string>
    <string name="total_balance">Total Balance</string>
    <string name="billable_amt">Billable Amt</string>
    <string name="contract_amt">Contract Amt</string>
    <string name="billed_amt">Billed Amt</string>
    <string name="billable_balance">Billable.Balc</string>
    <string name="billed_balance">Billed.Balc</string>
    <string name="current_amt">Current Amt</string>
    <string name="total_till_date_amount">Total Till Date Amount</string>
    <string name="paid">Paid</string>
    <string name="balance">Balance</string>
    <string name="back">BACK</string>
    <string name="version_portal">V1.1</string>
    <string name="version_test">V1.9.4-Portal</string>
    <string name="current_qty">Current Qty</string>
    <string name="update">UPDATE</string>
    <string name="date">Date</string>
    <string name="payer_category">Payer>Category</string>
    <string name="pay_method">Pay Method</string>
    <string name="amount">Amount</string>
    <string name="income">Income</string>
    <string name="issues_title">Issues Tittle</string>
    <string name="issues_details">Issues Details</string>
    <string name="mahesh">Mahesh</string>
    <string name="issues">Issues</string>
    <string name="images">Images</string>
    <string name="payer">Payer</string>
    <string name="cash">Cash</string>
    <string name="ref_cheque_no">Ref/Cheque No</string>
    <string name="description">Description</string>
    <string name="tax">Tax</string>
    <string name="req_by_date">Reqd by date</string>
    <string name="category">Category</string>
    <string name="cancel">CANCEL</string>
    <string name="close">CLOSE</string>
    <string name="payee">Payee</string>
    <string name="revd_amt_from_portal">Revd.Amt. from portal</string>


    <string-array name="imageFor">
        <item>NA</item>
        <item>M</item>
        <item>F</item>
    </string-array>

</resources>
