<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebackground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/buildman_txv_setmy_sites"
            style="@style/CustomTextview"

            android:layout_centerInParent="true"
            android:padding="4dp"
            android:text="@string/buildman"
            android:textColor="@color/yellow"
            android:textSize="@dimen/buildman_home"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buildmantechnologies_setmy_sites"
            style="@style/CustomTextview"
            android:layout_below="@+id/buildman_txv_setmy_sites"
            android:layout_centerHorizontal="true"
            android:padding="2dp"
            android:text="@string/poweredbuildmantechnologies"
            android:textColor="@color/blackdark"
            android:textSize="@dimen/poweredbuildmanTechnologies_home" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_weight="1">

        <TextView
            android:id="@+id/username_edt_setmy_sites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"

            android:padding="10dp" />

        <TextView

            android:id="@+id/password_edt_setmy_sites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/username_edt_setmy_sites"

            android:layout_marginTop="10dp"

            android:padding="10dp" />

        <Button
            android:id="@+id/getmy_sites_btn_setmy_sites"
            style="@style/Buttons_Down"
            android:layout_below="@+id/password_edt_setmy_sites"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/yellowlight"
            android:text="@string/getmy_project_sites" />

    </RelativeLayout>


</LinearLayout>

